# LumiStripe

./: .gitignore  .gitmodules  LICENSE  README.md  conftest.py  log.txt  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/lumistripe-app/: pyproject.toml
apps/lumistripe-app/src/lumistripe_app/: simulator.py
apps/lumistripe-app/tests/: test_simulator.py
apps/lumistripe-cli/: README.md  pyproject.toml
apps/lumistripe-cli/src/lumistripe_cli/: app.py  encoder.py
apps/lumistripe-cli/tests/: test_cli.py  test_encoder.py
apps/lumistripe-sim/: README.md  pyproject.toml
apps/lumistripe-sim/src/lumistripe_sim/: __init__.py  simulator.py
apps/lumistripe-sim/tests/: test_simulator.py
