[project]
name = "lumistripe"
version = "0.1.0"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "lumistripe-core",
    "lumistripe-cli",
    "lumistripe-sim",
]

[tool.uv.workspace]
members = [
    "packages/lumistripe-core",
    "apps/lumistripe-cli",
    "apps/lumistripe-sim",
]

[tool.uv.sources]
lumistripe-core = { workspace = true }
lumistripe-cli = { workspace = true }
lumistripe-sim = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.1",
    "ruff>=0.15",
    "mypy>=2.1",
]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
