[project]
name = "lumistripe"
version = "0.1.0"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "lumistripe-core",
    "lumistripe-cli",
    "lumistripe-sim",
]

[tool.uv.workspace]
members = [
    "packages/lumistripe-core",
    "apps/lumistripe-cli",
    "apps/lumistripe-sim",
]

[tool.uv.sources]
lumistripe-core = { workspace = true }
lumistripe-cli = { workspace = true }
lumistripe-sim = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.1",
    "pytest-cov>=7.1",
    "ruff>=0.15.21",
    "mypy>=2.3.0",
]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
addopts = [
    "--cov=lumistripe",
    "--cov=lumistripe_cli",
    "--cov=lumistripe_sim",
    "--cov-report=term-missing",
    "--cov-report=xml",
]

[tool.coverage.run]
branch = true
source = [
    "lumistripe",
    "lumistripe_cli",
    "lumistripe_sim",
]
omit = [
    "*/tests/*",
    "*/build/*",
    "third_party/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.mypy]
exclude = [
    "packages/lumistripe-core/src/lumistripe/audio/kissfft/",
]
