[project]
name = "lumistripe-cli"
version = "0.1.0"
description = "Headless GPIO runtime for Lumistripe"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Felix Sternberg", email = "felix@sternberg.cx" }
]
requires-python = ">=3.12"
dependencies = [
    "lumistripe-core[audio,gpio]",
]

[project.scripts]
lumistripe = "lumistripe_cli:main"
lumistripe-cli = "lumistripe_cli:main"

[tool.uv.sources]
lumistripe-core = { workspace = true }

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "lumistripe_cli"
