[project]
name = "lumistripe-sim"
version = "0.1.0"
description = "Lumistripe simulator runtime"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Felix Sternberg", email = "felix@sternberg.cx" }
]
requires-python = ">=3.12"
dependencies = [
    "lumistripe-core[audio]",
]

[project.scripts]
lumistripe-sim = "lumistripe_sim:main"

[tool.uv.sources]
lumistripe-core = { workspace = true }

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "lumistripe_sim"
